--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </nav>
 
-        <header class=" position-relative header-height bg-cover"></header>
+        <header class="border-top border-1 border-primary position-relative header-height bg-cover"></header>
 
         <section class="py-40 py-lg-80 bg-texture">
             <div class="container ">
